# leankv

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: llama3_8b.yaml  mistral7b.yaml
leankv/: __init__.py  combined.py  utils.py
leankv/teal/: __init__.py  calibration.py  greedy_opt.py  patching.py  sparse_fns.py
leankv/teal/kernels/: __init__.py  sparse_gemv.py
leankv/turboquant/: __init__.py  cache.py  codebook.py  paged_cache.py  quantizer.py  rotation.py
scripts/: benchmark.py  calibrate.py  eval_quality.py  raw_baseline.py  sweep.py
